<resources>
    <string name="app_name">RebusMobile</string>
    <string name="departure_airport_missing_error">Missing</string>
    <string name="arrival_airport_missing_error">Missing</string>
    <string name="departure_date_missing_error">Missing</string>
    <string name="arrival_date_missing_error">Missing</string>
    <string name="passenger_missing_error">Missing</string>

    <string name="login_username_missing_error">Missing</string>
    <string name="login_password_missing_error">Missing</string>

    <string name="register_username_missing_error">Missing</string>
    <string name="register_email_missing_error">Missing</string>
    <string name="register_password_missing_error">Missing</string>
    <string name="register_confirm_password_missing_error">Missing</string>
    <string name="register_password_match_error">Passwords must match</string>

    <string name="change_password_missing_error">Missing</string>
    <string name="change_new_password_missing_error">Missing</string>
    <string name="change_confirm_new_password_missing_error">Missing</string>
    <string name="change_password_match_error">Passwords must match</string>
    <string name="change_first_name_missing_error">Missing</string>
    <string name="change_last_name_missing_error">Missing</string>
    <string name="change_phone_missing_error">Missing</string>
    <string name="change_address_country_missing_error">Missing</string>
    <string name="change_address_city_missing_error">Missing</string>
    <string name="change_address_street_missing_error">Missing</string>
    <string name="change_address_house_number_missing_error">Missing</string>
    <string name="change_balance_missing_error">Missing</string>

    <string name="arrival_date_lower_error">Must be later</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search flights</string>
    <string name="menu_search_history">Search history</string>
    <string name="menu_log_in">Log In</string>
    <string name="menu_register">Register</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_change_first_name">Change First Name</string>
    <string name="menu_change_last_name">Change Last Name</string>
    <string name="menu_change_email">Change Email</string>
    <string name="menu_change_balance">Add Funds</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_change_phone">Change Phone Number</string>
    <string name="menu_change_address">Change Address</string>
    <string name="menu_confirm_purchase">Confirm Purchase</string>
    <string name="menu_tickets">My Tickets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
