<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rebusmobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.rebusmobile.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_log_in"
        android:name="com.example.rebusmobile.ui.log_in.LogInFragment"
        android:label="@string/menu_log_in"
        tools:layout="@layout/fragment_log_in" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.rebusmobile.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.example.rebusmobile.ui.log_out.LogOutFragment"
        android:label="@string/menu_log_out"
        tools:layout="@layout/fragment_log_out" />

    <fragment
        android:id="@+id/nav_settings_logged_out"
        android:name="com.example.rebusmobile.ui.settings_logged_out.SettingsLoggedOutFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings_logged_out" />

    <fragment
        android:id="@+id/nav_settings_logged_in"
        android:name="com.example.rebusmobile.ui.settings_logged_in.SettingsLoggedInFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings_logged_in" />

    <fragment
        android:id="@+id/nav_change_first_name"
        android:name="com.example.rebusmobile.ui.change_first_name.ChangeFirstNameFragment"
        android:label="@string/menu_change_first_name"
        tools:layout="@layout/fragment_change_first_name" />

    <fragment
        android:id="@+id/nav_change_last_name"
        android:name="com.example.rebusmobile.ui.change_last_name.ChangeLastNameFragment"
        android:label="@string/menu_change_last_name"
        tools:layout="@layout/fragment_change_last_name" />

    <fragment
        android:id="@+id/nav_change_email"
        android:name="com.example.rebusmobile.ui.change_email.ChangeEmailFragment"
        android:label="@string/menu_change_email"
        tools:layout="@layout/fragment_change_email" />

    <fragment
        android:id="@+id/nav_change_balance"
        android:name="com.example.rebusmobile.ui.change_balance.ChangeBalanceFragment"
        android:label="@string/menu_change_balance"
        tools:layout="@layout/fragment_change_funds" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.rebusmobile.ui.change_password.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_change_phone"
        android:name="com.example.rebusmobile.ui.change_phone.ChangePhoneFragment"
        android:label="@string/menu_change_phone"
        tools:layout="@layout/fragment_change_phone" />

    <fragment
        android:id="@+id/nav_change_address"
        android:name="com.example.rebusmobile.ui.change_address.ChangeAddressFragment"
        android:label="@string/menu_change_address"
        tools:layout="@layout/fragment_change_address" />

    <fragment
        android:id="@+id/nav_confirm_purchase"
        android:name="com.example.rebusmobile.ui.confirm_purchase.ConfirmPurchaseFragment"
        android:label="@string/menu_confirm_purchase"
        tools:layout="@layout/fragment_confirm_purchase" />

    <fragment
        android:id="@+id/nav_search_history"
        android:name="com.example.rebusmobile.ui.search_history.SearchHistoryFragment"
        android:label="@string/menu_search_history"
        tools:layout="@layout/fragment_search_history" />

    <fragment
        android:id="@+id/nav_search_result"
        android:name="com.example.rebusmobile.ui.search_result.SearchResultFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search_result" />

    <fragment
        android:id="@+id/nav_tickets"
        android:name="com.example.rebusmobile.ui.tickets.TicketsFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_tickets" />
</navigation>